--- a/sheldonmillzcover.css
+++ b/sheldonmillzcover.css
@@ -1,7 +1,7 @@
 body{
-    font-family: 'Copperplate' , monospace;
+    font-family: 'Copperplate', monospace;
     font-weight: bolder;
-    background-color: #888888;
+    background-color: black;
     color: white;
 
 }
